force-app/main/default/objects/MUSW__Report_Trigger__c/MUSW__Report_Trigger__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Report Trigger</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>