force-app/main/default/objects/MUSW__Report_Trigger__c/fields/MUSW__Parameters__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parameters__c</fullName>
    <description>pv0=xyz&amp;pv1=abc&amp;...</description>
    <inlineHelpText>pv0=xyz&amp;pv1=abc&amp;...</inlineHelpText>
    <label>Report Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>