force-app/main/default/objects/MUSW__Report_Trigger__c/fields/MUSW__Recipient__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Recipient__c</fullName>
    <label>Email Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>