force-app/main/default/objects/MUSW__Report_Trigger__c/fields/MUSW__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Template_Name__c</fullName>
    <label>Email Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>